fix stretched display of wysiwyg image on sidebar preview

--- a/css/dynamic-sidebar.css
+++ b/css/dynamic-sidebar.css
@@ -139,6 +139,7 @@
 #oet-dynamic-sidebar-preview.modal .preview-body .sidebar-story-post .story-embed-box { border:none; margin-top:0; padding:0; }
 #oet-dynamic-sidebar-preview.modal .preview-body .sidebar-story-post { overflow:hidden; }
 #oet-dynamic-sidebar-preview.modal .preview-body .sidebar-story-post:not(first-child) { margin-top:25px;  }
+#oet-dynamic-sidebar-preview.modal .preview-body p img { width:100%; height:auto; }
 @keyframes spin {
 	0% { transform: rotate(0deg); }
 	100% { transform: rotate(360deg); }
